--- a/index.html
+++ b/index.html
@@ -10,8 +10,22 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
 <body>
-    
 
-    
+    <!--Header -->
+
+    <header id="header">
+        <a href=""><img src="./img/logo.png" alt="Logo" class="logo"></a>
+        <nav>
+            <ul id="navbar">
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="subpages/shop.html">Shop</a></li>
+                <li><a href="subpages/blog.html">Blog</a></li>
+                <li><a href="subpages/about.html">About</a></li>
+                <li><a href="subpages/contact.html">Contact</a></li>
+                <li><a href="subpages/card.html"><i class="fa-solid fa-bag-shopping head-card"></i></a></li>
+            </ul>
+        </nav>
+    </header>
+
 </body>
 </html>
