--- a/index.html
+++ b/index.html
@@ -27,5 +27,20 @@
         </nav>
     </header>
 
+    <!--Hero Section-->
+
+    <section id="img-slider">
+        <div class="slide active">
+            <img src="./img/img1.jpg" alt="">
+            <div class="info">
+                <h4 class="select-none">Trade-In-Offer</h4>
+                <h2 class="select-none">Super Values Deals</h2>
+                <h1 class="select-none">On all products</h1>
+                <p class="select-none">Save more with coupons & up to 70% off!</p>
+                <button>Shop Now</button>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
