--- a/index.html
+++ b/index.html
@@ -224,5 +224,13 @@
         </div>
     </section>
 
+    <!--Banner Section-->
+
+    <section id="banner" class="section-m1">
+        <h4>Repair Services</h4>
+        <h2>Up to <span>70% Off</span> All t-shirt & Accessories</h2>
+        <button class="normal">Explore More</button>
+    </section>
+
 </body>
 </html>
