This is the feature banner > HTML Only

--- a/index.html
+++ b/index.html
@@ -249,5 +249,22 @@
         </div>
     </section>
 
+    <!--Feature Banner Section-->
+
+    <section id="banner3">
+        <div class="banner-box">
+            <h4>SEASON SELL</h4>
+            <h3>winter Collection -50% OFF</h3>
+        </div>
+        <div class="banner-box">
+            <h4>NEW FOOTWEAR COLLECTION</h4>
+            <h3>winter Collection -50% OFF</h3>
+        </div>
+        <div class="banner-box">
+            <h4>T-SHIRT</h4>
+            <h3>winter Collection -50% OFF</h3>
+        </div>
+    </section>
+
 </body>
 </html>
