This is the newsletter > HTML Only

--- a/index.html
+++ b/index.html
@@ -266,5 +266,18 @@
         </div>
     </section>
 
+    <!--NewsLetter Section-->
+
+    <section id="newsletter" class="section-p1 section m1">
+        <div class="newstext">
+            <h4>Sign Up For NewsLetters</h4>
+            <p>Get Email updates about our latest shop and <span>special offers.</span></p>
+        </div>
+        <form class="form">
+            <input type="text" placeholder="Your Email address">
+            <button class="normal" type="submit">Sign Up</button>
+        </form>
+    </section>
+
 </body>
 </html>
